package com.dino;

public class Hexagon {

}
