public class NoFungiTecton extends Tecton {
    public NoFungiTecton() { this.fungiEnabled = false; }
    public void handleHypha(Hypha h) { }
}

